[gd_scene load_steps=25 format=3 uid="uid://d4dbqrrqwxsb"]

[ext_resource type="Script" path="res://Ship/Walls/Door/Door.gd" id="1_7o7ps"]
[ext_resource type="Texture2D" uid="uid://dobw14md45sbd" path="res://Ship/wall_tilesheet.png" id="2_i5qhu"]
[ext_resource type="AudioStream" uid="uid://cwein0j14w66f" path="res://Ship/Walls/Door/Sounds/DoorOpen.ogg" id="3_csbmj"]
[ext_resource type="AudioStream" uid="uid://g7hp7ioikcwj" path="res://Ship/Walls/Door/Sounds/DoorClose.ogg" id="4_hv13g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1iune"]
atlas = ExtResource("2_i5qhu")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vvlb"]
atlas = ExtResource("2_i5qhu")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bb2t"]
atlas = ExtResource("2_i5qhu")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_li4mh"]
atlas = ExtResource("2_i5qhu")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gghna"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iune")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vvlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bb2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li4mh")
}],
"loop": false,
"name": &"closed",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_li4mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bb2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vvlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iune")
}],
"loop": false,
"name": &"open",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s3hcj"]
size = Vector2(30, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dr5sq"]
size = Vector2(30, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q8qwe"]
size = Vector2(100, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wesoy"]
size = Vector2(4, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dhujy"]
size = Vector2(3, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_olnpt"]
size = Vector2(4, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pbgdf"]
size = Vector2(3, 32)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_r27t5"]
polygon = PackedVector2Array(-16, -8, -16, 8, -10, 8, -10, -8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_pyetu"]
polygon = PackedVector2Array(10, -8, 10, 8, 16, 8, 16, -8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_omlib"]
polygon = PackedVector2Array(-10, -8, -10, 8, -5, 8, -5, 6, -6, 6, -6, 1.98392, -5, 2, -5, -2, -6, -2, -6, -6, -5, -6, -5, -8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_12g3c"]
polygon = PackedVector2Array(-8, 8, -5, 8, -5, 6, -6, 6, -6, 1.98392, -5, 2, -5, -2, -6, -2, -6, -6, -5, -6, -5, -8, -8, -8, -8, -6, -9, -6, -9, -2, -8, -2, -8, 2, -9, 2, -9, 6, -8, 6)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_rrcxo"]
polygon = PackedVector2Array(6, -8, 6, -6, 5, -6, 5, -2, 6, -2, 6, 2, 5, 2, 5, 6, 6, 6, 6, 8, 10, 8, 10, -8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_q8ih3"]
polygon = PackedVector2Array(6, -8, 6, -6, 5, -6, 5, -2, 6, -2, 6, 2, 5, 2, 5, 6, 6, 6, 6, 8, 9, 8, 9, 6, 8, 6, 8, 2, 9, 2, 9, -2, 8, -2, 8, -6, 9, -6, 9, -8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_jw75i"]
polygon = PackedVector2Array(1, -8, 1, -6, 0, -6, 0, -2, 1, -2, 1, 2, 0, 2, 0, 6, 1, 6, 1, 8, 6, 8, 6, 6, 5, 6, 5, 2, 6, 2, 6, -2, 5, -2, 5, -6, 6, -6, 6, -8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_js5sb"]
size = Vector2(160, 160)

[node name="Door" type="Node2D"]
script = ExtResource("1_7o7ps")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_gghna")
animation = &"closed"

[node name="Hitbox" type="Node2D" parent="."]

[node name="StaticBody2DSides" type="AnimatableBody2D" parent="Hitbox"]
sync_to_physics = false

[node name="Left" type="CollisionShape2D" parent="Hitbox/StaticBody2DSides"]
position = Vector2(-65, 0)
shape = SubResource("RectangleShape2D_s3hcj")

[node name="Right" type="CollisionShape2D" parent="Hitbox/StaticBody2DSides"]
position = Vector2(65, 0)
shape = SubResource("RectangleShape2D_dr5sq")

[node name="StaticBody2DWalkway" type="AnimatableBody2D" parent="Hitbox"]
sync_to_physics = false

[node name="Walkway" type="CollisionShape2D" parent="Hitbox/StaticBody2DWalkway"]
shape = SubResource("RectangleShape2D_q8qwe")

[node name="AnimatedHitbox" type="Node2D" parent="Hitbox"]
scale = Vector2(5, 5)

[node name="0left" type="AnimatableBody2D" parent="Hitbox/AnimatedHitbox"]
sync_to_physics = false

[node name="hitbox" type="CollisionShape2D" parent="Hitbox/AnimatedHitbox/0left"]
position = Vector2(-7, 0)
shape = SubResource("RectangleShape2D_wesoy")

[node name="1left" type="AnimatableBody2D" parent="Hitbox/AnimatedHitbox"]
sync_to_physics = false

[node name="hitbox" type="CollisionShape2D" parent="Hitbox/AnimatedHitbox/1left"]
position = Vector2(-3.5, 0)
shape = SubResource("RectangleShape2D_dhujy")

[node name="0right" type="AnimatableBody2D" parent="Hitbox/AnimatedHitbox"]
sync_to_physics = false

[node name="hitbox" type="CollisionShape2D" parent="Hitbox/AnimatedHitbox/0right"]
position = Vector2(7, 0)
shape = SubResource("RectangleShape2D_olnpt")

[node name="1right" type="AnimatableBody2D" parent="Hitbox/AnimatedHitbox"]
sync_to_physics = false

[node name="hitbox" type="CollisionShape2D" parent="Hitbox/AnimatedHitbox/1right"]
position = Vector2(3.5, 0)
shape = SubResource("RectangleShape2D_pbgdf")

[node name="LeftOccluder" type="LightOccluder2D" parent="Hitbox"]
scale = Vector2(5, 5)
occluder = SubResource("OccluderPolygon2D_r27t5")

[node name="RightOccluder" type="LightOccluder2D" parent="Hitbox"]
scale = Vector2(5, 5)
occluder = SubResource("OccluderPolygon2D_pyetu")

[node name="AnimatedOccluders" type="Node2D" parent="Hitbox"]
scale = Vector2(5, 5)

[node name="0left" type="LightOccluder2D" parent="Hitbox/AnimatedOccluders"]
occluder = SubResource("OccluderPolygon2D_omlib")

[node name="1left" type="LightOccluder2D" parent="Hitbox/AnimatedOccluders"]
position = Vector2(3, 0)
occluder = SubResource("OccluderPolygon2D_12g3c")

[node name="0right" type="LightOccluder2D" parent="Hitbox/AnimatedOccluders"]
occluder = SubResource("OccluderPolygon2D_rrcxo")

[node name="1right" type="LightOccluder2D" parent="Hitbox/AnimatedOccluders"]
position = Vector2(-3, 0)
occluder = SubResource("OccluderPolygon2D_q8ih3")

[node name="2center" type="LightOccluder2D" parent="Hitbox/AnimatedOccluders"]
position = Vector2(-3, 0)
occluder = SubResource("OccluderPolygon2D_jw75i")

[node name="Area" type="Node2D" parent="Hitbox"]

[node name="MouseHitbox" type="Area2D" parent="Hitbox/Area"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox/Area/MouseHitbox"]
shape = SubResource("RectangleShape2D_js5sb")

[node name="Area2D" type="Area2D" parent="Hitbox/Area"]
visible = false
collision_layer = 16
collision_mask = 16

[node name="Walkway" type="CollisionShape2D" parent="Hitbox/Area/Area2D"]
shape = SubResource("RectangleShape2D_q8qwe")

[node name="Sound" type="Node2D" parent="."]
visible = false

[node name="DoorOpen" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource("3_csbmj")
max_distance = 4000.0
attenuation = 4.0
bus = &"SFX"

[node name="DoorClose" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource("4_hv13g")
max_distance = 4000.0
attenuation = 4.0
bus = &"SFX"

[connection signal="input_event" from="Hitbox/Area/MouseHitbox" to="." method="_on_mouse_hitbox_input_event"]
[connection signal="area_entered" from="Hitbox/Area/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Hitbox/Area/Area2D" to="." method="_on_area_2d_area_exited"]
